<resources>
    <string name="app_name">About Me</string>
    <string name="syed_zubair">Syed Zubair</string>
    <string name="yellow_star">yellow_star</string>
    <string name="bio"><b>Hi, my name is Zubair.</b>
        A self learnt front end web developer.
        \nA University student graduating soon and engaging
        \nmyself with learning the world.
        \nA coffee lover fell down in the floor of the things surfing on
        \nand around screens of variant dimensions.
        \nAn Enthusiastic leader of my peers.
        \nA University student graduating soon and engaging
        \nmyself with learning the world.
        \nA coffee lover fell down in the floor of the things surfing on
        \nand around screens of variant dimensions.
        \nAn Enthusiastic leader of my peers.
        \nA University student graduating soon and engaging
        \nmyself with learning the world.
        \nA coffee lover fell down in the floor of the things surfing on
        \nand around screens of variant dimensions.
        \nAn Enthusiastic leader of my peers.
<!--Lines in bio string is repeated to check the scrollview in production phase-->
</string>
    <string name="what_is_your_nick_name">What is your nick name?</string>
    <string name="done">Done</string>
</resources>
