<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/small_padding"
    android:paddingTop="16dp"
    android:paddingEnd="@dimen/small_padding"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/name_text"
        style="@style/NameStyle"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:text="@string/syed_zubair"
        android:textAlignment="center" />


    <EditText
        android:id="@+id/edit_text"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:hint="@string/what_is_your_nick_name" />


    <TextView
        android:id="@+id/edited_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        style="@style/NameStyle"
        android:textAlignment="center"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/montserrat"
        android:text="@string/done"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/star_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/yellow_star"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:id="@+id/bio_scroll"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:paddingStart="@dimen/small_padding"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="@dimen/small_padding"
        android:paddingRight="16dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/bio_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:lineSpacingMultiplier="1.2"
            android:padding="16dp"
            android:paddingStart="@dimen/small_padding"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="@dimen/small_padding"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/bio" />
    </ScrollView>


</LinearLayout>

